--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,16 +18,40 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+
+.gradient-var1 {
+  background: linear-gradient(135deg, rgb(255, 255, 255), rgb(187, 187, 187));
+}
+
+.gradient-var-2 {
+  background: linear-gradient(315deg, rgb(255, 255, 255), rgb(187, 187, 187));
+}
+
+
+.loading_animation {
+  animation-name: gradientSkeleton;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  transition: background ease-in-out 1s
+}
+
+@keyframes gradientSkeleton {
+  from {
+    background: linear-gradient(135deg, rgb(255, 255, 255), rgb(187, 187, 187));
+  }
+
+  to {
+    background: linear-gradient(315deg, rgb(255, 255, 255), rgb(187, 187, 187));
   }
 }
